--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">How to play:</strong> Use your <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqnORKqZCgVrj7PAYy4q5Opp2q3I1_wVQ3RNkMnbfyxfNlQdHEAA" /> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
     <p>
